--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -57,6 +57,7 @@ const {
 
         <!-- Desktop nav -->
         <nav class="nav nav-desktop">
+          <a href="/" class="home-btn">Home</a>
           <div class="dropdown">
             <a href="/services" class="nav-parent">Services</a>
             <div class="dropdown-menu">
@@ -123,6 +124,7 @@ const {
       </div>
 
       <ul class="mobile-list" role="list">
+        <li class="mobile-item"><a href="/">Home</a></li>
         <li class="mobile-item has-sub">
           <button
             class="sub-toggle"
@@ -135,14 +137,16 @@ const {
             <li><a href="/services/space-efficiency">Space Efficiency</a></li>
             <li>
               <a href="/services/specialised-needs-support"
-                >Specialised Needs Support</a>
+                >Specialised Needs Support</a
+              >
             </li>
             <li>
               <a href="/services/technical-approach">Technical Approach</a>
             </li>
             <li>
               <a href="/services/fit-for-purpose-and-style"
-                >Fit for purpose &amp; style</a>
+                >Fit for purpose &amp; style</a
+              >
             </li>
             <li>
               <a href="/services/share-house">Share house &amp; co-living</a>
